# CardanoHackathon-25-Submission

./: .env  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  DASHBOARD_GUIDE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.api  Dockerfile.payment  FEATURES.md  FRONTEND_UI_UX_PLAN.md  HACKATHON_SUBMISSION.md  MASUMI_SETUP_GUIDE.md  PI_HTTP_SETUP_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_VERIFY.txt  README.md  REALTIME_PAYMENT_SYSTEM.md  REALTIME_VERIFICATION_GUIDE.md  TESTING_GUIDE.md  VERIFICATION_SUMMARY.md  VISUAL_DIAGRAMS.md  WALLET_INTEGRATION_QUICKSTART.md  WEB_INTERFACE_GUIDE.md  app.py  deploy_docker.sh  deploy_realtime_docker.sh  docker-compose.yml  docker-start.ps1  firebase-seed-data.json  generate_wallets.py  package-lock.json  payment_dashboard.py  pi_sensor_http.py  requirements.txt  run.py  (+5 more)
RaspberryPi Code/: sensor.py
agents/: __init__.py  dispute_resolver.py  orchestrator.py  payment_verifier.py  pricing_agent.py  route_optimizer.py  security_guard.py  spot_finder.py
dashboard_templates/: dashboard.html
docs/: BACKEND_TEAM_README.md  FRONTEND_TEAM_README.md  HARDWARE_TEAM_README.md  MCP_SOKOSUMI_SETUP.md
frontend/: Dockerfile  config-overrides.js  nginx.conf  package-lock.json  package.json  tailwind.config.js
hackathon-main/: .env  COMPLETE_INTEGRATION.md  INTEGRATION_SUMMARY.md  PARKING_LAYOUT_UPDATE.md  QUICK_REFERENCE.md  REAL_INTEGRATION_COMPLETE.md  SETUP_GUIDE.md  package-lock.json  package.json  (+1 more)
mcp/: pyproject.toml
mcp/app/: job_store.py  main.py
(+68 files in other folders)
