[project]
name = "mcp-agent-orchestrator"
version = "0.1.0"
description = "Masumi MCP-compliant orchestration server for Sokosumi agents"
requires-python = ">=3.10,<3.13"
authors = ["Masumi Builders <dev@masumi.network>"]
readme = "README.md"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "openai>=1.35.15",
    "redis>=5.0.4",
    "tenacity>=8.2.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.10"
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
